@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add summary of missing/extra elements in compare diagnostics
+
 0.000132  2020-08-06 18:10:48-07:00 America/Los_Angeles
 
     - Fix min Test2 version
